# netra-profiler

./: .gitignore  README.md  netra_profile_schema_v1.json  pyproject.toml
benchmarks/: datasets.yaml  fetch_data.py  forge_dataset.py  runner.py  worker.py
src/netra_profiler/: diagnostics.py  engine.py  profiler.py  types.py
src/netra_profiler/cli/: console.py  main.py
tests/unit/: test_core.py  test_diagnostics.py
