[project]
name = "netra-profiler"
version = "0.3.0"
description = "High-performance profiling and data quality tool built with Polars. "
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Nitin Paul", email = "nitinpaul.dev@gmail.com" }
]
license = { text = "MIT" }
keywords = ["data-engineering", "data-profiling", "polars", "data-quality", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "polars>=1.0.0",
    "pyarrow>=14.0.0",
    "numpy>=2.2.6",
    "typer>=0.24.0", # CLI Framework
    "rich>=14.3.1", # CLI UI
    "psutil>=7.2.2",
    "pyyaml>=6.0.3",
]

[project.urls]
Homepage = "https://github.com/netrabase/netra-profiler"
Repository = "https://github.com/netrabase/netra-profiler"
Issues = "https://github.com/netrabase/netra-profiler/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0.0", # Testing framework
    "ruff>=0.3.0", # Linter/Formatter (Rust-based)
    "mypy>=1.8.0",
    "types-pyyaml>=6.0.12.20260408",
]

[project.scripts]
netra = "netra_profiler.cli.main:app"

# --- Tool Configuration ---

# Hatchling (Build Backend)
[tool.hatch.build.targets.wheel]
packages = ["src/netra_profiler"]

# Ruff (Linter & Formatter)
[tool.ruff]
line-length = 100
target-version = "py310"   # Enforce Python 3.10+ compatibility
src = ["src"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (import sorting)
    "B",   # flake8-bugbear (common bugs)
    "UP",  # pyupgrade (modernize python syntax)
    "N",   # pep8-naming
    "SIM", # flake8-simplify
    "PL",  # pylint (complexity checks)
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["netra_profiler"]

# Mypy (Static Type Checker)
[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true    # Force type hints everywhere
ignore_missing_imports = true

# Pytest (Testing Framework)
[tool.pytest.ini_options]
addopts = "--strict-markers --strict-config -ra"
testpaths = ["tests"]
pythonpath = ["src"]
